--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,7 +19,7 @@
   template:
     src: evolinux.conf.j2
     dest: /etc/proftpd/conf.d/z-evolinux.conf
-    mode: 0644
+    mode: "644"
   notify: restart proftpd
   tags:
     - proftpd
