replace "state: installed" with "state: present"

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: package is installed
   apt:
     name: proftpd-basic
-    state: installed
+    state: present
   tags:
   - proftpd
   - packages
